# td

./: .gitignore  README.md  pyproject.toml
td/: cli.py
td.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
