[project]
name = "td"
version = "0.1.0"
description = "task daemon — minimal, text-first, daily driver"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "fuzzywuzzy>=0.18",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "rapidfuzz>=3.8",
]
[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-mock"]
[project.scripts]
td = "td.cli:app"
[tool.ruff]
line-length = 100
target-version = "py311"
[tool.pytest.ini_options]
testpaths = ["tests"]